--- a/.github/workflows/automatic-python-publish.yml
+++ b/.github/workflows/automatic-python-publish.yml
@@ -49,6 +49,6 @@ jobs:
         TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
         TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
       run: |
-        sed -i '' 's/SNAPSHOT/${{ steps.semvers.outputs.patch }}/' ../setup.py
+        sed -i '' 's/SNAPSHOT/${{ steps.semvers.outputs.patch }}/' ../../setup.py
         python setup.py sdist bdist_wheel
         twine upload dist/*
