--- a/.github/workflows/automatic-python-publish.yml
+++ b/.github/workflows/automatic-python-publish.yml
@@ -48,6 +48,6 @@ jobs:
         TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
         TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
       run: |
-        sed -i.bak 's/SNAPSHOT/${{ steps.semvers.outputs.patch }}/' ./setup.py
+        sed -i.bak 's/0.0.0-dev/${{ steps.semvers.outputs.patch }}/' ./setup.py
         python setup.py sdist bdist_wheel
         twine upload dist/*
